--- a/state-machine/index.html
+++ b/state-machine/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Відкрийте консоль браузера ;)</h3>
-    <script src="/state-machine.js"></script>
+    <h5>(Натисність F12, та відкрийте потрібну вкладку)</h5>
+    <script src="./state-machine.js"></script>
 </body>
 </html>
